# focus-mode

./: .gitignore  README.md  default.nix  flake.nix  main.py  modules.nix  pyproject.toml  requirements.txt
classes/: config.py  discord.py  focus.py
core/: config.py  discord.py  focus.py  main.py
