[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focus-mode"
version = "0.0.1"
authors = [
  { name="Gurjaka", email="esartia.gurika@gmail.com" },
]
description = "A productivity tool that automatically sets your Discord status to 'Do Not Disturb' when Neovim is active, sends auto-replies to incoming messages, and blocks distracting websites to maintain focus during coding sessions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "python-dateutil>=2.8",
    "tomli>=2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
]
keywords = ["productivity", "discord", "focus", "time-management"]

[tool.setuptools]
packages = ["core"]

[project.urls]
Homepage = "https://github.com/Gurjaka/focus-mode"
Documentation = "https://github.com/Gurjaka/focus-mode/blob/main/README.md"
Issues = "https://github.com/Gurjaka/focus-mode/issues"
Source = "https://github.com/Gurjaka/focus-mode"

[project.scripts]
focus-mode = "core.main:main"


[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = [
	"F",       # pyflakes
	"E",       # pycodestyle errors
	"W",       # pycodestyle warnings
	"I",       # isort
	"N",       # pep8-naming
	"G",       # flake8-logging-format
	"PIE",     # flake8-pie
	"UP",      # pyupgrade
]

ignore = [
    "E501",    # ignore due to conflict with formatter
    "N818",    # exceptions don't need the Error suffix
    "E741",    # allow ambiguous variable names
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"stubs/*" = [
    "N",       # naming conventions don't matter in stubs
    "F403",    # star imports are okay in stubs
    "F405",    # star imports are okay in stubs
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
